// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`k8s-to-container-apps - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Migrate containerized workloads from existing Kubernetes clusters (self-hosted, GKE, EKS, on-premises) to Azure Container Apps with compatibility assessment and deployment automation. WHEN: migrate Kubernetes to Container Apps, convert k8s manifests to ACA, move from GKE to Azure Container Apps, move from EKS to Azure Container Apps, migrate k8s deployments to Azure, reduce Kubernetes operational overhead, k8s to ACA migration assessment. DO NOT USE FOR: new Container Apps deployments without migration (use azure-prepare), AKS cluster management (use azure-kubernetes), general cross-cloud migration (use azure-cloud-migrate).",
  "extractedKeywords": [
    "aks",
    "apps",
    "assessment",
    "automation",
    "azure",
    "azure-cloud-migrate",
    "azure-kubernetes",
    "azure-prepare",
    "bicep",
    "cli",
    "cluster",
    "clusters",
    "compatibility",
    "container",
    "containerized",
    "convert",
    "cross-cloud",
    "deploy",
    "deployment",
    "deployments",
    "existing",
    "from",
    "function",
    "general",
    "identity",
    "k8s",
    "key vault",
    "kubernetes",
    "management",
    "manifests",
    "mcp",
    "migrate",
    "migration",
    "monitor",
    "move",
    "networking",
    "on-premises",
    "operational",
    "overhead",
    "reduce",
    "security",
    "self-hosted",
    "validation",
    "when",
    "with",
    "without",
    "workloads",
  ],
  "name": "k8s-to-container-apps",
}
`;

exports[`k8s-to-container-apps - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "aks",
  "apps",
  "assessment",
  "automation",
  "azure",
  "azure-cloud-migrate",
  "azure-kubernetes",
  "azure-prepare",
  "bicep",
  "cli",
  "cluster",
  "clusters",
  "compatibility",
  "container",
  "containerized",
  "convert",
  "cross-cloud",
  "deploy",
  "deployment",
  "deployments",
  "existing",
  "from",
  "function",
  "general",
  "identity",
  "k8s",
  "key vault",
  "kubernetes",
  "management",
  "manifests",
  "mcp",
  "migrate",
  "migration",
  "monitor",
  "move",
  "networking",
  "on-premises",
  "operational",
  "overhead",
  "reduce",
  "security",
  "self-hosted",
  "validation",
  "when",
  "with",
  "without",
  "workloads",
]
`;
